[DEV] Remove config extensions

--- a/public/theme/materialize/templates/partials/_footer.twig
+++ b/public/theme/materialize/templates/partials/_footer.twig
@@ -18,5 +18,5 @@
 </footer>
 
 <script src="{{ asset('js/jquery.min.js', 'theme') }}"></script>
-<script src="{{ asset('js/foundation.js', 'theme') }}"></script>
+<script src="{{ asset('js/materialize.min.js', 'theme') }}"></script>
 <script src="{{ asset('js/app.js', 'theme') }}"></script>
